--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0.98"
 axum = { version = "0.8.4", features = ["ws"] }
 base64 = "0.22.1"
 dotenvy = "0.15.7"
+env_logger = "0.11.8"
 hex = "0.4.3"
 log = "0.4.27"
 parking_lot = "0.12.3"
